--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
 <body class="bg-gray-900 text-gray-100 antialiased">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
+    <script async defer src="https://apis.google.com/js/api.js"></script>
+    <script async defer src="https://accounts.google.com/gsi/client"></script>
 </body>
 </html>
